Fix action button layout bug

--- a/views/themes/publish/assets/stylesheets/publish/publish.scss
+++ b/views/themes/publish/assets/stylesheets/publish/publish.scss
@@ -30,7 +30,12 @@ tr.is-deleted,
 }
 
 .qor-page-subnav__header + .qor-actions--publish{
-  padding: 20px 0;
+  padding: 10px 24px 10px 0;
+  background-color: #f5f5f5;
+  position: fixed;
+  margin-left: -24px;
+  z-index: 1;
+  width: calc(100% - 264px);
   .qor-publish__button-popover{
     color: rgba(0, 0, 0, .87);
     box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
